# Daily-task

./: CMakeLists.txt  Task1.cpp  main.cpp
task1/: Sv.h  test_main.cpp
task3/: task3.cpp
task4/: task4.txt
task5/: task5.txt
task6/: task6.txt
task7/: task7.cpp  task7.txt
